tests/ui/13-raw-in-attribute.rs
use azumi::html;

fn main() {
    let _component = html! {
        <div class={Raw("test")}></div>
    };
}
